--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,71 @@
+#root {
+  height: 100%;
+}
+
 .App {
+  height: 100%;
   text-align: center;
+}
+
+.menu {
+  position: absolute;
+  color: #F2F2F2;
+  width: 100%;
+  height: 47px;
+  background: #4F4F4F;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-end;
+}
+
+.logo {
+  margin-right: auto;
+  margin-left: 16px;
+}
+
+.action {
+  margin-right: auto;
+  color: #F2C94C;
+}
+
+.container {
+  display: flex;
+  flex-direction: row;
+  height: 100%;
+}
+
+.left {
+  width: 50%;
+  height: 100%;
+  background: rgba(242, 201, 76, 0.69);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.right {
+  width: 50%;
+}
+
+.tagline {
+  font-weight: 900;
+  font-size: 36px;
+  line-height: 42px;
+}
+
+.subtitle {
+  margin-top: 56px;
+  font-weight: 900;
+  font-size: 24px;
+  color: #4F4F4F;
+}
+
+.link {
+  color: #F2F2F2;
+  text-decoration: none;
+  margin-right: 16px;
 }
 
 .App-logo {
