--- a/src/pages/welcome.css
+++ b/src/pages/welcome.css
@@ -1,8 +1,4 @@
-#root {
-  height: 100%;
-}
-
-.App {
+.welcome {
   height: 100%;
   text-align: center;
 }
@@ -29,10 +25,10 @@
   color: #F2C94C;
 }
 
-.container {
+.hero {
   display: flex;
   flex-direction: row;
-  height: 100%;
+  height: 100vh;
 }
 
 .left {
@@ -66,39 +62,4 @@
   color: #F2F2F2;
   text-decoration: none;
   margin-right: 16px;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
