--- a/src/layouts/main.css
+++ b/src/layouts/main.css
@@ -20,9 +20,13 @@
   margin-left: 16px;
   display: flex;
 	justify-content: center;
-	align-items: center;
+  align-items: center;
+  
 }
-
+.logo:hover{
+  text-decoration: none;
+  color: #F2C94C;
+}
 .logo:before {
 	background-image: url('/assets/logo.jpg');
   background-size: 31px 31px;
@@ -37,6 +41,10 @@
   margin-right: auto;
   color: #F2C94C;
 }
+.action:hover {
+  color: #fff;
+  text-decoration: none;
+}
 
 .hero {
   display: flex;
@@ -49,3 +57,8 @@
   text-decoration: none;
   margin-right: 16px;
 }
+.link:hover {
+  color: #F2C94C;
+  text-decoration: none;
+}
+
