--- a/src/pages/Dashboard.css
+++ b/src/pages/Dashboard.css
@@ -2,7 +2,7 @@
 
 .sidebar {
   height: 100%;
-  background: rgb(70, 145, 70);
+  background: rgb(230, 199, 109);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -11,9 +11,15 @@
 }
 
 .dash {
-  width: 40%;
+  /* width: 20%;
   margin: auto;
-  background-size: 100% 100%;
+  background-size: 100% 100%; */
+
+  /* display: grid; */
+  /* margin: 20px 0 50px 0; */
+  /* grid-template-columns: repeat(4, 1fr);
+  grid-auto-rows: 1fr;
+  grid-gap: 1rem; */
 }
 
 .mentors{
@@ -24,11 +30,13 @@
   margin-top:5rem
 }
 .dash-inner{
+  width: 100%;
+  height: 80%;
   border-radius: 1.5rem;
-  margin: 5rem auto;
-  background-color:  rgb(70, 145, 70);
-  color: #fff;
-  padding: 3rem;
+  margin: auto;
+  background-color:  rgb(230, 199, 109);
+  color: black;
+  padding: 1rem;
 }
 .mentors-list{
  
@@ -36,7 +44,7 @@
   margin-top:40px
 }
 .choko{
-  background: rgba(241, 219, 152, 0.69);
+  background: #fff
 }
 .profile-img {
   font-weight: 900;
