--- a/src/pages/Dashboard/Dashboard.css
+++ b/src/pages/Dashboard/Dashboard.css
@@ -2,7 +2,7 @@
 
 .sidebar {
   height: 100%;
-  background: rgb(230, 199, 109);
+  background: rgba(242, 201, 76, 0.69);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -34,7 +34,7 @@
   height: 80%;
   border-radius: 1.5rem;
   margin: auto;
-  background-color:  rgb(230, 199, 109);
+  background-color:  rgba(242, 201, 76, 0.69);
   color: black;
   padding: 1rem;
 }
