--- a/src/pages/Dashboard/Dashboard.css
+++ b/src/pages/Dashboard/Dashboard.css
@@ -1,9 +1,9 @@
 
 
 .dash {
-  /* width: 20%;
-  margin: auto;
-  background-size: 100% 100%; */
+  width: 100%;
+  /* margin: auto;
+  background-size: 100% 100%; */ 
 
   /* display: grid; */
   /* margin: 20px 0 50px 0; */
