--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -1,5 +1,5 @@
 .profile-form-wrapper {
-  margin: 16% auto;
+  margin: 10% auto;
   width: 50%;
   display: flex;
   flex-direction: column;
@@ -8,7 +8,7 @@
 .update{
   font-size:2.5rem;
   font-weight: bold;
-  margin-left: 10rem;
+  margin: auto;
   color: green;
 }
 .btn-lg{
