fix sidebar style

--- a/src/pages/Register/register.css
+++ b/src/pages/Register/register.css
@@ -28,3 +28,9 @@
   .sweet-loading{
     margin: auto !important;
   }
+  .re-input{
+    padding: .40rem !important;
+  }
+  .btn-lg{
+    margin-left: 5.8rem !important;
+  }
