--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -28,3 +28,10 @@
 .sweet-loading{
   margin: auto !important;
 }
+.re-input{
+  padding: .45rem !important;
+}
+
+.form-control-lg {
+  padding: .5rem 5rem !important;
+};
