--- a/src/components/CourseList/CourseList.css
+++ b/src/components/CourseList/CourseList.css
@@ -28,6 +28,17 @@
 }
 .acc-card :hover{
   text-decoration: none !important;
-  font-weight: bolder !important;
-  font-size: 1.25rem !important;
+}
+
+.card-header {
+  padding: .75rem 1.25rem;
+  margin-bottom: 0;
+  background-color: inherit !important;
+  border-bottom: none !important;
+}
+.btn-lg {
+  font-size: 0.85rem !important;
+  line-height: 1.5;
+  border-radius: none !important;
+  border-color: #f2c94c !important;
 }
