--- a/src/components/CourseList/CourseList.css
+++ b/src/components/CourseList/CourseList.css
@@ -1,10 +1,18 @@
 .course-list-wrapper {
   margin: 10% auto;
+  width: 100%;
+}
+.accordion{
   width: 50%;
+  margin: auto;
+}
+.acc-wrapper{
+  width: 15%;
+  margin: 0 80%;
 }
 .btn-primary{
-  margin: 0 120%;
-  width: 15%;
+ 
+  width: 8%;
   background: #f2c94c !important;
   color: #4F4F4F !important;
   border-color:  #4F4F4F !important;
