--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -15,11 +15,15 @@
   font-size: 24px;
   color: #4F4F4F;
 }
+.btn-warning{
+  background-color: #4F4F4F !important;
+  color: #fff !important;
+}
 
 .login_left {
   width: 50%;
   height: 100%;
-  background: rgba(242, 201, 76, 0.69);
+  background: #dbdbdb !important;
   display: flex;
   flex-direction: column;
   align-items: center;
