--- a/src/pages/ResetPassword/ResetPassword.css
+++ b/src/pages/ResetPassword/ResetPassword.css
@@ -19,7 +19,7 @@ color: #4F4F4F;
 .login_left {
 width: 50%;
 height: 100%;
-background: rgba(242, 201, 76, 0.69);
+background: #dbdbdb;
 display: flex;
 flex-direction: column;
 align-items: center;
