--- a/src/pages/UpdateProfile/UpdateProfile.css
+++ b/src/pages/UpdateProfile/UpdateProfile.css
@@ -24,7 +24,7 @@
   height: 80%;
   border-radius: 1.5rem;
   margin: auto;
-  background-color:  rgba(242, 201, 76, 0.69);
+  background-color:  #dbdbdb;
   color: black;
   padding: 1rem;
 }
