--- a/src/pages/Dashboard/rightFrame/rightFrame.css
+++ b/src/pages/Dashboard/rightFrame/rightFrame.css
@@ -6,29 +6,36 @@
   flex-direction: column;
 }
 .right-frame-upper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   /* width: 100vh; */
   height: 60vh;
-  background-color: #e5e5e5;
-  border: 1px solid #828282;
+  /* background-color: #e5e5e5; */
+  /* border: 1px solid #828282; */
   box-sizing: border-box;
   align-items: center;
-  padding: 50px;
+  /* padding: 50px; */
 }
 .right-frame-lower {
   /* width: 100vh; */
   height: 40vh;
   background-color: #c4c4c4;
-  border: 1px solid #828282;
+  /* border: 1px solid #828282; */
   box-sizing: border-box;
   padding: 70px;
 }
 .profile-image{
-  margin-top: 5rem;
-  margin-right: 12rem;
+  /* margin-top: 5rem; */
+  margin-right: 7em;
+}
+.mentor{
+  /* margin-top: 5rem; */
+  margin-left: 5em;
 }
 .stack {
   background: #f2c94c;
-  border: 1px solid #828282;
+  /* border: 1px solid #828282; */
   font-family: Roboto;
   font-style: normal;
   font-weight: 900;
@@ -40,13 +47,13 @@
   margin-right: 12rem;
 }
 .img-circle {
-  width: 200px;
-  height: 200px;
+  width: 250px;
+  height: 250px;
   background: #f2c94c;
   border-radius: 50%;
 }
 .full-name {
-  margin-right: 13rem;
+  margin-right: 6rem;
   margin-top: 2rem;
   font-family: Roboto;
   font-style: normal;
@@ -66,7 +73,7 @@
   line-height: 19px;
   text-align: center;
   color: #f2f2f2;
-  margin-right: 12rem;
+  margin-right: 7rem;
 }
 .company {
   background: #eb5757;
@@ -77,7 +84,7 @@
   font-weight: bold;
   font-size: 15px;
   line-height: 18px;
-  margin-right: 12rem;
+  margin-right: 6rem;
   text-align: center;
 }
 .mentee-progress-bar {
